# devscope

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BackendGate.tsx  GitHubHeatmap.tsx  Layout.tsx  PageHeader.tsx  ReportContent.tsx  ReportListItem.tsx  SplashScreen.tsx
frontend/src/components/projects/: AddFromGitHubForm.tsx  AddProjectForm.tsx  AddProjectPanel.tsx  DiscoverDialog.tsx  DiscoverForm.tsx  FolderPickerButton.tsx  ProjectActions.tsx  ProjectCommitSuggester.tsx  ProjectsTable.tsx
frontend/src/lib/: external.ts  format.ts
frontend/src/lib/api/: base.ts  client.ts  types.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  ProjectsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  SummariesPage.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: build_backend.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  paths.rs  secrets.rs
src-tauri/src/commands/: commit.rs  dashboard.rs  github.rs  meta.rs  mod.rs  projects.rs  reports.rs  secrets.rs  settings.rs  stats.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_project_github_full_name.sql
src-tauri/src/git/: collector.rs  diff.rs  discover.rs  mod.rs  remote.rs  stats.rs
src-tauri/src/github_api/: client.rs  clone.rs  mod.rs
src-tauri/src/llm/: budget.rs  mod.rs  ollama.rs  openai.rs  router.rs
src-tauri/src/prompts/: contexts.rs  filters.rs  mod.rs
src-tauri/templates/: commit_message.tera  extract_changes.tera  standup.tera
src-tauri/tests/: db.rs  git.rs  llm.rs  prompts.rs
src-tauri/tests/snapshots/: prompts__commit_message_renders_with_examples.snap  prompts__extract_changes_renders_with_truncated_flag.snap  prompts__standup_renders_expected_output.snap
src/devscope/: config.py  secrets.py  server_main.py
src/devscope/cli/: main.py
src/devscope/collectors/: base.py  git_diff.py  git_local.py  git_stats.py
src/devscope/generators/: base.py  commit_message.py  standup.py
src/devscope/generators/prompts/: commit_message.j2  standup.j2
src/devscope/github/: client.py  clone.py  local_match.py
src/devscope/llm/: base.py  budget.py  router.py
src/devscope/llm/providers/: ollama.py  openai.py
src/devscope/storage/: models.py  repositories.py  session.py
src/devscope/web/: app.py
src/devscope/web/templates/: _latest_report.html  base.html  dashboard.html  projects.html  reports.html  settings.html
tests/: conftest.py  test_cli_smoke.py  test_collectors_git_local.py  test_config.py  test_generators_standup.py  test_llm_budget.py  test_llm_provider_ollama.py  test_llm_provider_openai.py  test_llm_router.py  test_secrets.py  test_storage_models.py  test_storage_repositories.py  test_web_smoke.py
