[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devscope"
version = "0.0.1"
description = "Self-hosted AI-powered developer productivity engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ceyhun Emre", email = "services@impexron.de" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pygit2>=1.15",
    "httpx>=0.27",
    "tenacity>=8.5",
    "structlog>=24.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
devscope = "devscope.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/devscope"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/devscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
