[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devscope"
version = "0.0.3"
description = "Self-hosted AI-powered developer productivity engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ceyhun Emre", email = "services@impexron.de" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pygit2>=1.15",
    "httpx>=0.27",
    "tenacity>=8.5",
    "structlog>=24.1",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "httpx>=0.27",
    "pyinstaller>=6.10",
]

[project.scripts]
devscope = "devscope.cli.main:app"
devscope-backend = "devscope.server_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devscope"]

[tool.hatch.build.targets.wheel.force-include]
"src/devscope/generators/prompts" = "devscope/generators/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/devscope/cli/*.py" = ["B008"]                 # Typer Argument/Option idiom
"src/devscope/web/*.py" = ["B008"]                 # FastAPI Depends/Form idiom
"src/devscope/storage/models.py" = ["RUF012"]      # SQLAlchemy type_annotation_map

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/devscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
